--- a/web/projects.html
+++ b/web/projects.html
@@ -29,12 +29,31 @@
     <div id="skip-menu"></div>
   <div class="content">
     <div class="column-right">
+	
+		<div class="box-in">
+			  <h1>Shipped Games</h1>
+			  <p> <img src="img/game_strip.png" alt="game_strip" width="689" height="137" /> </p>
+			  <p>Games I have developed from start to finish (and live ops) and some games I have contributed to (mainly core library development) while working at PlayFirst.</p> 
+			  <p>From left to right: 
+				  <ul>
+					<li><b>Diner Dash 2015</b> (iOS/Android) </li>
+					<li><b>Mall Stars</b> (iOS)</li>
+					<li><b>DinerTown Zoo</b> (iOS) </li> 
+					<li><b>Diner Dash Classic</b> (iOS/Android)</li>
+					<li><b>The Mortal Instruments</b> (iOS/Android)</li> 
+					<li><b>Cloudy With a Chance of Meatballs 2 </b> (iOS/Android) </li>
+				  </ul>
+			  </p>
+		</div>
+		
+		<p class="divider"> <img src="img/divider.png" alt="divider" width="449" height="78" /> </p>
+		
 		<div class="box-in">
 			  <h1>Death Leak<img src="img/deathleak_icon.png" alt="deathleak_logo" width="200" height="200" /> </h1>
 			  <p> </p>
-			  <p>My current project. Developed in c++ and DirectX with no major middleware.</p> 
+			  <p>A personal hobby project developed in c++ and DirectX with no major middleware.</p> 
 			  <p>The project started off as a way to learn DirectX and was initially in 3D. Once I had the fundamentals 
-			  I decided to mould it into a 2D action platformer.</p>
+			  I decided to mould it into a 2D action platformer. I chip away at this whenever I have some free time.</p>
 			  <div class="video-frame">
 				  <br />
 				  <img src="img/video_icon.jpeg" alt="Video Icon" width="56.25" height="56.25" /> 
@@ -42,11 +61,14 @@
 				  <iframe width="560" height="315" src="//www.youtube.com/embed/CF3ttlFnxAY" frameborder="0" allowfullscreen></iframe>
 			  </div>
 		</div>	
+		
+		<p class="divider"> <img src="img/divider.png" alt="divider" width="449" height="78" /> </p>
+		
 		<div class="box-in">
 			  <h1>RagCat <img src="img/cat.jpg" alt="rss" width="200" height="200" /> </h1>
 			  <p> </p>
 			  <p>This was a final year college project developed with 4 other programmers (Gavin Campbell, Liam Rudel, Simon Coulter and Conor Masterson. Art by Paul Lohman. Music by Darragh Coy).</p>
-			  <p>It was developed in c++ and used the havok physics middleware along with Ogre 3D for rendering.</p>
+			  <p>It was developed in c++ and used Havok physics along with Ogre 3D for rendering.</p>
 			  <p>The aim of the game is to use the telekinetic powers of a paralysed cat to reach the goal area. The project went on to win $10,000 in the Intel/Havok Physics World Cup.</p>
 			  <div class="video-frame">
 				  <br />
@@ -55,6 +77,9 @@
 				  <iframe width="560" height="315" src="//www.youtube.com/embed/_HvFIK9bs6A" frameborder="0" allowfullscreen></iframe>
 			  </div>
 		</div>	
+		
+		<p class="divider"> <img src="img/divider.png" alt="divider" width="449" height="78" /> </p>
+		
 		<div class="box-in">
 			  <h1>eMemory Digital Interactive Scrapbook – Concept <img src="img/ememory_logo.png" alt="rss" width="260" height="91.5" /> </h1>
 			  <p> </p>
@@ -67,7 +92,9 @@
 				  <iframe width="560" height="315" src="//www.youtube.com/embed/LgKe2c7Q9bk" frameborder="0" allowfullscreen></iframe>
 			  </div>
 		</div>		
-
+		
+		<p class="divider"> <img src="img/divider.png" alt="divider" width="449" height="78" /> </p>
+		
 		<div class="box-in">
 			  <h1> Trampenstein! </h1>
 			  <p> </p>
@@ -80,7 +107,9 @@
 				  <iframe width="560" height="315" src="//www.youtube.com/embed/6BIK1sCKolM" frameborder="0" allowfullscreen></iframe>
 			  </div>
 		</div>	
-
+		
+		<p class="divider"> <img src="img/divider.png" alt="divider" width="449" height="78" /> </p>
+		
 		<div class="box-in">
 			  <h1> Video Presentations </h1>
 			  <p> </p>
