--- a/web/achievements.html
+++ b/web/achievements.html
@@ -37,6 +37,9 @@
 			  the top 10 of the world finals.</p>
 			  <h2> <img src="img/ragcat_level.png" alt="rss" width="733" height="336" /> </h2>
 			</div>
+			
+			<p class="divider"> <img src="img/divider.png" alt="divider" width="449" height="78" /> </p>
+			
 			<div class="box-in">
 			  <h1>Microsoft Imagine Cup, Innovation Accelerator Winner<img src="img/imagine_cup_logo.jpg" alt="rss" width="260" height="91.5" /> </h1>
 			  <p> </p>
