--- a/web/projects.html
+++ b/web/projects.html
@@ -58,7 +58,7 @@
 				  <br />
 				  <img src="img/video_icon.jpeg" alt="Video Icon" width="56.25" height="56.25" /> 
 				  <h2>Death Leak</h2>
-				  <iframe width="560" height="315" src="//www.youtube.com/embed/CF3ttlFnxAY" frameborder="0" allowfullscreen></iframe>
+				  <iframe width="560" height="315" src="//www.youtube.com/embed/3f42VUvgxrc?list=UU8Da_TPQS2M8nnpnF6jH0kQ" frameborder="0" allowfullscreen></iframe>
 			  </div>
 		</div>	
 		
